--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,32 +1,46 @@
+name: Update Profile Info
 on:
   schedule:
     - cron: "0 */12 * * *" 
-  workflow_dispatch: # Permite rodar manualmente
+  workflow_dispatch:
   push:
     branches:
-    - main
+      - main
 
 jobs:
-  generate:
+  update-all:
     permissions:
       contents: write
     runs-on: ubuntu-latest
     steps:
-      - name: generate pacman-contribution-graph.svg
+      # 1. Setup inicial
+      - uses: actions/checkout@v3
+
+      # 2. Gerar Gráfico Pacman
+      - name: Generate Pacman Graph
         uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: lcrochaDEV
 
+      # 3. Organizar arquivos para a branch 'output'
       - name: Organize files
         run: |
           mkdir -p dist
-          # A action gera um arquivo chamado github-contribution-grid-snake.svg
-          cp github-contribution-grid-snake.svg dist/pacman-contribution-graph.svg
-          cp github-contribution-grid-snake.svg dist/pacman-contribution-graph-dark.svg
+          cp pacman-contribution-graph.svg dist/pacman-contribution-graph.svg
+          cp pacman-contribution-graph.svg dist/pacman-contribution-graph-dark.svg
 
+      # 4. Publicar gráfico na branch 'output'
       - name: push to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # 5. Atualizar Badges do Credly no seu README
+      - name: Update Credly Badges
+        uses: pemtajo/badge-readme@main
+        with:
+          CREDLY_USER: lucas-rocha.e2b61fbf
+          NUMBER_LAST_BADGES: 12
