--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,30 +1,35 @@
-name: Update Profile Info
+name: Generate pacman animation
+
 on:
   schedule:
     - cron: "0 */12 * * *" 
-  workflow_dispatch:
+  workflow_dispatch: # Permite rodar manualmente
   push:
     branches:
-      - main
+    - main
 
 jobs:
-  update-all:
+  generate:
     permissions:
       contents: write
     runs-on: ubuntu-latest
     steps:
-      # 1. Setup inicial
-      - uses: actions/checkout@v3
-
-      # 2. Gerar Gráfico Pacman
-      - name: Generate Pacman Graph
+      - name: generate pacman-contribution-graph.svg
         uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: lcrochaDEV
 
-      # 3. Organizar arquivos para a branch 'output'
       - name: Organize files
         run: |
           mkdir -p dist
-          cp pacman-contribution-graph.svg dist/pacman-contribution-graph.svg
-          cp pacman-contribution-graph.svg dist/pacman-contribution-graph-dark.svg
+          # A action gera um arquivo chamado github-contribution-grid-snake.svg
+          cp github-contribution-grid-snake.svg dist/pacman-contribution-graph.svg
+          cp github-contribution-grid-snake.svg dist/pacman-contribution-graph-dark.svg
+
+      - name: push to output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
