--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -2,7 +2,7 @@ name: Generate pacman animation
 
 on:
   schedule:
-    - cron: "0 */12 * * *" 
+    - cron: "0 0 * * *" 
   workflow_dispatch: # Permite rodar manualmente
   push:
     branches:
@@ -13,11 +13,13 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - name: generate pacman-contribution-graph.svg
         uses: abozanona/pacman-contribution-graph@main
         with:
-          github_user_name: lcrochaDEV
+          github_user_name: ${{ github.repository_owner }}
+          svg_out_background: "transparent"
 
       - name: Organize files
         run: |
@@ -29,7 +31,7 @@ jobs:
           # Verifica se o arquivo foi realmente copiado para evitar erro no próximo passo
           ls -R dist/
 
-      - name: push to output branch
+      - name: push pacman-contribution-graph.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
