--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,29 +1,26 @@
-name: Generate pacman animation
+name: Generate Pacman Game
 
 on:
   schedule:
-    - cron: "0 0 * * *" 
-  workflow_dispatch: # Permite rodar manualmente
-  push:
-    branches:
-    - main
+    - cron: "0 0 * * *" # Roda todo dia à meia-noite
+  workflow_dispatch:
 
 jobs:
-  generate:
-    permissions:
-      contents: write
+  build:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
-
     steps:
-      - name: generate pacman-contribution-graph.svg
-        uses: abozanona/pacman-contribution-graph@main
+      - name: Generate Snake Files
+        uses: platane/snk@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
-          svg_out_background: "transparent"
+          github_user_name: lcrochaDEV
+          outputs: |
+            dist/pacman-contribution-graph.svg
+            dist/pacman-contribution-graph-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: push pacman-contribution-graph.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - name: Push to Output Branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
