--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -12,17 +12,13 @@ jobs:
       - name: Generate Snake Files
         uses: platane/snk@v3
         with:
-          # Mantido apenas o que o seu log validou como correto
           github_user_name: lcrochaDEV
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          outputs: |
-            dist/pacman-contribution-graph.svg
-            dist/pacman-contribution-graph-dark.svg?palette=github-dark
 
       - name: Push to Output Branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
-          build_dir: dist
+          build_dir: github-contribution-grid-snake.svg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
