--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -9,17 +9,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
       - name: Generate Snake Files
         uses: platane/snk@v3
         with:
-          # APENAS os campos que o seu log validou como corretos:
+          # Mantendo apenas o que o seu log validou como correto
           github_user_name: lcrochaDEV
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
       - name: Push to Output Branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
-          build_dir: .
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
