--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -18,6 +18,7 @@ jobs:
           # Mantendo apenas o que o seu log validou como correto
           github_user_name: lcrochaDEV
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          svg_out_background: transparent
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
