--- a/.github/workflows/barge-readme.yaml
+++ b/.github/workflows/barge-readme.yaml
@@ -19,8 +19,8 @@ jobs:
         uses: lcrochaDEV/barge-readme@main
         with:
           username: 'guitarralcs' # O usuário Alura do seu amigo
-          start_marker: 'START_SECTION_ALURA'
-          end_marker: 'END_SECTION_ALURA'
+          start_section: 'START_SECTION_ALURA'
+          end_section: 'END_SECTION_ALURA'
           badge_limit: '20'       # O limite que ele desejar
 
 
